src/pages/report.css
@import url('./report/header.css');
@import url('./report/editor-common.css');
@import url('./report/editor-query.css');
@import url('./report/editor-view.css');

.page-report {
    padding-top: 0;
}

/********************************
* Error
********************************/

.page-report > .report-editor .report-error,
.page-report > .report-content > .report-error {
    display: block;
    overflow: hidden;
    border-left: 3px solid #f33;
    background: #f9dbdb;
    padding: 8px 12px;
    font-size: 12px;
    white-space: pre-wrap;
    font-family: Consolas, Monaco, monospace;
    font-size: 11px;
}
.page-report > .report-editor .report-error::before,
.page-report > .report-content > .report-error::before {
    display: block;
    margin-bottom: .5em;
    font-size: 16px;
}
.page-report > .report-editor .query-error::before {
    content: 'Query error';
}
.page-report > .report-content > .render-error::before {
    content: 'Render error';
}

